<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_login"
    android:layout_margin="55dp">

    <TextView
        style="@style/dialog_header"
        android:text="@string/unsaved_changes" />


    <TextView
        style="@style/dialog_text"
        android:text="@string/all_your_changes_will_not_be_saved_n_are_you_sure_want_to_leave"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        >
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/ok"
            android:id="@+id/btnOK"
            android:layout_width="90dp"
            android:background="@drawable/custom_button_dialog"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:fontFamily="@font/be_vietnam_medium"
            android:layout_height="40dp"
            android:textAllCaps="false"

            />
        <androidx.appcompat.widget.AppCompatButton
            android:text="@string/cancel"
            android:id="@+id/btnCancel"
            android:layout_width="90dp"
            android:background="@drawable/custom_button_dialog_black"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_height="40dp"
            android:textAllCaps="false"
            android:fontFamily="@font/be_vietnam_medium"
            android:layout_marginLeft="30dp"
            />

    </LinearLayout>








</LinearLayout>