<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".home.TransferHomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/svTransaction"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/searchview_custom"
        android:focusable="false"
        app:iconifiedByDefault="false"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/search_receiver"
        app:searchIcon="@drawable/ic_search"
        app:theme="@style/SearchViewStyle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/in_SmallHeaderText"
        android:text="@string/quick_access"
        android:layout_marginTop="20dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/rcvQuickAccess"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/in_SmallHeaderText"
            android:text="@string/all_friends"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/in_SmallHeaderText"
            android:text="@string/see_all"
            android:textColor="@color/primary_yellow"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/rcvAllFriends"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>

</LinearLayout>